Fix not-compatible isBlank